--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "debug": "^4.3.1",
     "gatsby": "^3.4.1",
     "gatsby-node-helpers": "0.3.0",
+    "jsdom": "^16.5.3",
+    "urllib": "^2.37.1",
     "yuque-loader": "^1.2.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.4",
     "@types/jest": "^24.0.13",
+    "@types/jsdom": "^16.2.10",
     "@types/node": "^12.0.2",
     "egg-ci": "^1.18.0",
     "eslint": "^7.7.0",
